--- a/index.html
+++ b/index.html
@@ -67,12 +67,8 @@
             <div class="container-xxl py-4 bg-dark hero-header mb-5">
                 <div class="container my-5 py-5">
                     <div class="row align-items-left g-5">
-                        <div class="col-lg-8 text-left text-lg-start">
-                            <h1 class="display-3 text-white animated slideInLeft">Enjoy Our<br>Delicious Meal</h1>
-                            <p class="text-white animated slideInLeft mb-4 pb-2">We serves up standard Indian fare from both North and South India. Tandoori cuisine and seafood is served right alongside South Indian delicasies as well as fast food.We also arrange and decorate the dining tables and buffet counters in a very attractive manner.</p>
-                        </div>
-                        <div class="col-lg-6 text-center text-lg-end overflow-hidden">
-                            <!--<img class="img-fluid" src="img/hero.png" alt=""> -->
+                        <div class="col-lg-8 text-left">
+                            <h4 class="text-white animated slideInLeft">Indulge in the rich flavors of Malabar cuisine at our restaurant - where every bite takes you on a journey to God's Own Country!</h4>
                         </div>
                     </div>
                 </div>
@@ -413,43 +409,29 @@
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>One of the best places to have authentic Kerala food. The flavours were mouth watering and yummy. 10/10 for the food</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Manan Sharma</h5>
-                                <small>Local Guide</small>
-                            </div>
+                            <h5 class="mb-1">Manan Sharma</h5>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>Definitely a fine dining! If you are a person who is looking for an Authentic Indian Restaurant, The Grand Malabar is the perfect choice! This place offers exceptional food, friendly service and a great ambience to spend quality time with family and friends. We had a variety of items: Mutton Biriyani, Fish Cutlet, Fish Nirvana, Chilli Chicken, Kerala Porotta, Alleppey Chicken curry. Very delicious and well prepared, you can chose among many menu options. Extremely happy with the service. Highly recommend this place!</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Tesni George</h5>
-                                <small></small>
-                            </div>
+                            <h5 class="mb-1">Tesni George</h5>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>We stumbled upon The Grand Malabar located at a quiet place in waterloo in our search for authentic kerala flavours. We loved the food here. We tried chemmen prawn roast, coconut chicken soup, kalappam , allepey chicken curry and malabar chicken biryani. Everything tasted so good. I can't wait to go back again.</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Anindita Roy</h5>
-                                <small>Local Guide</small>
-                            </div>
+                            <h5 class="mb-1">Anindita Roy</h5>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>It was a great experience in The Grand Malabar Indian Cuisine restaurant. Located in a quiet place in Waterloo , this evening restaurant serves some authentic Kerala foods at a reasonable price.The Kalapam and beef curry was yummy and is one of the best recipes in entire Ontario.The team were very friendly and were very much keen in customer satisfaction. A great restaurant which can definitely checkout atleast once for the great ambience and taste</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
                             <div class="ps-3">
                                 <h5 class="mb-1">Anil Alias Paul</h5>
-                                <small>Local Guide</small>
                             </div>
                         </div>
                     </div>
@@ -457,33 +439,20 @@
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>All the food items in the menu is delicious and authentic. Value for money. Loved it</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Nupoor Singh</h5>
-                                <small>Local Guide</small>
-                            </div>
+                            <h5 class="mb-1">Nupoor Singh</h5>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>New favourite Indian place in KW! Very fresh tasting ingredients and unique dishes. Delicious!</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Kevin Martin</h5>
-                                <small>Local Guide</small>
-                            </div>
+                            <h5 class="mb-1">Kevin Martin</h5>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>I recently dined at an the grand malabar and it was an absolute delight. The staff was extremely friendly and attentive, and the ambiance was cozy and inviting. The food was absolutely delicious, with a perfect balance of spices and flavors that left me wanting more. Overall, I highly recommend this restaurant to anyone looking for a fantastic Indian dining experience</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="" style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h5 class="mb-1">Bhavaani Amjith</h5>
-                                <small></small>
-                            </div>
+                            <h5 class="mb-1">Bhavaani Amjith</h5>
                         </div>
                     </div>
                 </div>
@@ -514,22 +483,16 @@
         <div class="container-fluid bg-dark text-light footer pt-3 mt-3 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-3">
                 <div class="row g-5">
-                    <div class="col-4">
+                    <div class="col">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>347 Erb St. W #4, Waterloo, ON N2L 1W4</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+15192659598</p>
-                        <div class="d-flex pt-2">
+                        <h4 class="section-title ff-secondary text-start text-primary fw-normal  pt-3">Follow us on social media</h4>
+                        <div class="d-flex pt-3">
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/thegrandmalabar/"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>347 Erb St. W #4, Waterloo, ON N2L 1W4</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+15192659598</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/thegrandmalabar/"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                     <div class="col-4">
