--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark px-4 px-sm-5 px-lg-5 py-0 py-sm-0 py-lg-0">
                 <a href="" class="navbar-brand p-0">
                     <h1 id="responsiveHeading" class="text-primary m-3 responsive-heading">
-                        <img src='img/logo/yellow-logo.PNG' width='60' height='60'>The Grand Malabar</h1>
+                        <img src='img/logo/yellow-logo.png' width='60' height='60'>The Grand Malabar</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
