feat(dynamicCustReview): added dynamic customer review

--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>
-                    <h1 class="mb-4">Our Culinary Selections</h1>
+                    <h1 class="mb-1">Our Culinary Selections</h1>
+                    <a onclick="openCompleteMenuOptions()" class="mb-3 btn btn-secondary" style="text-transform: none;">View Full Menu Options</a>
                 </div>
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
@@ -201,57 +202,7 @@
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
                     <h1 class="mb-5">Our Customers Say!!!</h1>
                 </div>
-                <div class="owl-carousel testimonial-carousel">
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>One of the best places to have authentic Kerala food. The flavours were mouth watering and yummy. 10/10 for the food</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Manan Sharma</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Definitely a fine dining! If you are a person who is looking for an Authentic Indian Restaurant, The Grand Malabar is the perfect choice! This place offers exceptional food, friendly service and a great ambience to spend quality time with family and friends. We had a variety of items: Mutton Biriyani, Fish Cutlet, Fish Nirvana, Chilli Chicken, Kerala Porotta, Alleppey Chicken curry. Very delicious and well prepared, you can chose among many menu options. Extremely happy with the service. Highly recommend this place!</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Tesni George</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>We stumbled upon The Grand Malabar located at a quiet place in waterloo in our search for authentic kerala flavours. We loved the food here. We tried chemmen prawn roast, coconut chicken soup, kalappam , allepey chicken curry and malabar chicken biryani. Everything tasted so good. I can't wait to go back again.</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Anindita Roy</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>It was a great experience in The Grand Malabar Indian Cuisine restaurant. Located in a quiet place in Waterloo , this evening restaurant serves some authentic Kerala foods at a reasonable price.The Kalapam and beef curry was yummy and is one of the best recipes in entire Ontario.The team were very friendly and were very much keen in customer satisfaction. A great restaurant which can definitely checkout atleast once for the great ambience and taste</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Anil Alias Paul</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>All the food items in the menu is delicious and authentic. Value for money. Loved it</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Nupoor Singh</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>New favourite Indian place in KW! Very fresh tasting ingredients and unique dishes. Delicious!</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Kevin Martin</h5>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-transparent border rounded p-4">
-                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>I recently dined at an the grand malabar and it was an absolute delight. The staff was extremely friendly and attentive, and the ambiance was cozy and inviting. The food was absolutely delicious, with a perfect balance of spices and flavors that left me wanting more. Overall, I highly recommend this restaurant to anyone looking for a fantastic Indian dining experience</p>
-                        <div class="d-flex align-items-center">
-                            <h5 class="mb-1">Bhavaani Amjith</h5>
-                        </div>
-                    </div>
-                </div>
+                <div id="testimonialDivContainer" class="container"></div>
             </div>
         </div>
         <!-- Testimonial End -->
@@ -342,7 +293,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">TheGrandMalabarIndianCuisine</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">TheGrandMalabarIndianCuisine</a>, All Rights Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 							<a style="color: #0F172B !important;" href="https://htmlcodex.com">Designed By HTML Codex</a>
