feat(css): modified image width responsiveness

--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="row g-3">
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/menu/Main_menu1.jpeg">
+                            <div class="col-6 text-start" style="padding: 0; margin: 0">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/menu/Main_menu1.jpeg" style="margin-bottom: 1%;margin-right: 1%;">
                             </div>
-                            <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/menu/Puthiyapila_Choru.jpeg" style="margin-top: 18%;">
+                            <div class="col-6 text-start"  style="padding: 0; margin: 0;">
+                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/menu/Puthiyapila_Choru.jpeg" style="margin-top: 16.5%;margin-left: 1.5%;">
                             </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/menu/Fish_Nirvana.jpeg">
+                            <div class="col-6 text-end" style="padding: 0; margin: 0;">
+                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/menu/Fish_Nirvana.jpeg" style="margin-top: 0.5%;margin-right: 0.2%;">
                             </div>
-                            <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/menu/Main_menu2.jpeg">
+                            <div class="col-6 text-end" style="padding: 0; margin: 0;">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.7s" src="img/menu/Main_menu2.jpeg" style="margin-top: 0.5%;margin-left: 1.5%;">
                             </div>
                         </div>
                     </div>
