--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body onload="initiateUI()">
@@ -44,7 +44,7 @@
         <div class="container-xxl position-relative p-0 bg-dark ">
             <nav class="navbar navbar-expand-lg navbar-dark px-4 px-sm-5 px-lg-5 py-0 py-sm-0 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 id="responsiveHeading" class="text-primary m-3 responsive-heading">
+                    <h1 id="responsiveHeading" class="text-primary m-3 responsive-heading" style="font-weight:900">
                         <img src='img/logo/yellow-logo.png' width='60' height='60'>The Grand Malabar</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -282,8 +282,8 @@
                     <div class="col">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
                         <h6 class="text-light fw-normal">MON : <i class="text-primary" style="font-size: 12px;">Closed</i></h6>
-                        <h6 class="text-light fw-normal">TUE - WED - THU : <i class="text-primary" style="font-size: 12px;">4:30 - 10:30 PM</i></h6>
-                        <h6 class="text-light fw-normal">FRI : <i class="text-primary" style="font-size: 12px;">4:30 - 11:00 PM</i></h6>
+                        <h6 class="text-light fw-normal">TUE - WED - THU : <i class="text-primary" style="font-size: 12px;">12:30 - 3:00 PM, 4:30 - 10:30 PM</i></h6>
+                        <h6 class="text-light fw-normal">FRI : <i class="text-primary" style="font-size: 12px;">12:30 - 3:00 PM, 4:30 - 11:00 PM</i></h6>
                         <h6 class="text-light fw-normal">SAT : <i class="text-primary" style="font-size: 12px;">3:00 - 11:00  PM</i></h6>
                         <h6 class="text-light fw-normal">SUN : <i class="text-primary" style="font-size: 12px;">3:00 - 10:30 PM</i></h6>
                     </div>
@@ -322,7 +322,7 @@
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
     <script src="js/behaviour.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
