--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.min.js"></script>
-    <script src="js/behaviour.js"></script>
+    <script src="js/behaviour.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
